--- a/portality/templates/leaps/survey/survey.html
+++ b/portality/templates/leaps/survey/survey.html
@@ -24,6 +24,19 @@ jQuery(document).ready(function() {
         maxDate: '-12y'
     };
     $('.dobdatepicker').datepicker(dobopts);
+    var dobformat = function(event) {
+        event.preventDefault();
+        var datestring = $('#date_of_birth').val();
+        var pattern = /^([0-9]{2})\/([0-9]{2})\/([0-9]{4})$/;
+        if ( pattern.test(datestring) ) {
+            $('.dobwarning').hide();
+            $('#date_of_birth').removeClass('parsley-error').addClass('parsley-validated').addClass('parsley-success');
+        } else {
+            $('.dobwarning').show();
+            $('#date_of_birth').removeClass('parsley-success').removeClass('parsley-validated').addClass('parsley-error');
+        }
+    }
+    $('.checkdob').bind('change',dobformat);
     
     // hide survey sections and add prev/next nav-throughs
     var doprevnext = function(event) {
@@ -275,7 +288,9 @@ input.bigfield{
                     </tr>
         	        <tr>
 	                    <td style="text-align:right;padding:6px 10px 0 0;">Date of birth</td>
-                		<td><input type="text" class="dobdatepicker" name="date_of_birth" data-required="true" data-trigger="keyup change focusout"></td>
+                		<td><input type="text" class="dobdatepicker checkdob" id="date_of_birth" name="date_of_birth" data-required="true" data-trigger="keyup change focusout"><br>
+                		<div class="dobwarning" style="color:red;font-size:0.8em;margin-top:-10px;margin-bottom:10px;display:none;">format must be DD/MM/YYYY</div>
+                		</td>
 
 	                    <td style="text-align:right;padding:6px 10px 0 100px;">UCAS number</td>
                 		<td><input type="text" name="ucas_number"></td>
@@ -367,10 +382,12 @@ input.bigfield{
 	    <div class="span12">
 	        <div class="well">
 	            <h2>Qualifications and currently sitting</h2>
-	            <p><strong>Part 2 of 6</strong> - please provide details of your <strong>exam results to date AND subjects you are currently sitting</strong>. <br /><br />If you do not yet know your grade, select Unknown in the Grade field. If you have any qualifications that do not meet the criteria below, you will have the option to describe them on the following pages. Use one row per qualification.</p>
+	            <p><strong>Part 2 of 6</strong> - <strong>Please input details of all qualifications you have (or are studying for current year) for each year of school</strong>. <br /><br />If you do not yet know your grade, select Unknown in the Grade field. If you have any qualifications that do not meet the criteria below, you will have the option to describe them on the following pages. Use one row per qualification.</p>
 	        </div>
 	    </div>
 	</div>
+
+    <h3>Third / Fourth year qualifications</h3>
 
 	<div class="row-fluid">
 	    <div class="span12">		
@@ -392,10 +409,95 @@ input.bigfield{
                 		    {% endfor %}
                 		</select></td>
                 		<td><select name="qualification_year">
-                		    <option></option>
                 		    <option>Third year</option>
                 		    <option>Fourth year</option>
+                		</select></td>
+                		<td><select name="qualification_level">
+                		    <option></option>
+                		    {% for opt in selections.levels %}
+                		        <option>{{ opt }}</option>
+                		    {% endfor %}
+                		</select></td>
+                		<td><select name="qualification_grade">
+                		    <option></option>
+                		    {% for opt in selections.grades %}
+                		        <option>{{ opt }}</option>
+                		    {% endfor %}
+                		</select></td>
+                    </tr>
+                </tbody>
+	        </table>
+	    </div>
+	</div>
+
+    <hr></hr>
+
+    <h3>Fifth year qualifications</h3>
+
+	<div class="row-fluid">
+	    <div class="span12">		
+	        <table class="multi manyrows">
+                <thead>
+                    <tr>
+                        <th>Subject</th>
+                        <th>School year taken</th>
+                        <th>Level of qualification</th>
+                        <th>Grade</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr>
+                		<td><select name="qualification_subject" class="select2this">
+                		    <option></option>
+                		    {% for opt in selections.subjects %}
+                		        <option>{{ opt }}</option>
+                		    {% endfor %}
+                		</select></td>
+                		<td><select name="qualification_year">
                 		    <option>Fifth year</option>
+                		</select></td>
+                		<td><select name="qualification_level">
+                		    <option></option>
+                		    {% for opt in selections.levels %}
+                		        <option>{{ opt }}</option>
+                		    {% endfor %}
+                		</select></td>
+                		<td><select name="qualification_grade">
+                		    <option></option>
+                		    {% for opt in selections.grades %}
+                		        <option>{{ opt }}</option>
+                		    {% endfor %}
+                		</select></td>
+                    </tr>
+                </tbody>
+	        </table>
+	    </div>
+	</div>
+
+    <hr></hr>
+
+    <h3>Sixth year / other qualifications</h3>
+
+	<div class="row-fluid">
+	    <div class="span12">		
+	        <table class="multi manyrows">
+                <thead>
+                    <tr>
+                        <th>Subject</th>
+                        <th>School year taken</th>
+                        <th>Level of qualification</th>
+                        <th>Grade</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr>
+                		<td><select name="qualification_subject" class="select2this">
+                		    <option></option>
+                		    {% for opt in selections.subjects %}
+                		        <option>{{ opt }}</option>
+                		    {% endfor %}
+                		</select></td>
+                		<td><select name="qualification_year">
                 		    <option>Sixth year</option>
                 		    <option>Other</option>
                 		</select></td>
