--- a/portality/templates/leaps/admin/student.html
+++ b/portality/templates/leaps/admin/student.html
@@ -949,8 +949,12 @@ fieldset{
                 		<td><input type="checkbox" name="early_application"
                 		{% if record %}{% if record.data.early_application %} checked="checked"{% endif %}{% endif %}
                 		> Early application</td>
-                    </tr>
-        	        <tr style="height:40px;">
+
+                                <td><input type="checkbox" name="hn_only_candidate"
+                		{% if record %}{% if record.data.hn_only_candidate %} checked="checked"{% endif %}{% endif %}
+                		> HN only candidate</td>
+                        </tr>
+        	        <tr>
                 		<td><input type="checkbox" name="looked_after_child"
                 		{% if record %}{% if record.data.looked_after_child %} checked="checked"{% endif %}{% endif %}
                 		> Looked after child</td>
@@ -962,43 +966,48 @@ fieldset{
                 		<td><input type="checkbox" name="young_carer"
                 		{% if record %}{% if record.data.young_carer %} checked="checked"{% endif %}{% endif %}
                 		> Young carer</td>
+
+                		<td><input type="checkbox" name="previous_interview"
+                		{% if record %}{% if record.data.previous_interview %} checked="checked"{% endif %}{% endif %}
+                		> Previous interview</td>
+
+                    </tr>
+                    <tr style="height:40px;">
+                        <td></td>
+                        <td></td>
+                        <td></td>
+                        <td><input type="checkbox" name="pae_action"
+                		{% if record %}{% if record.data.pae_action %} checked="checked"{% endif %}{% endif %}
+                		> PAE action</td>
                     </tr>
 
         	        <tr>
 	                    <td style="text-align:right;padding:6px 10px 0 0;">Mothers occupation</td>
 	                    <td><input type="text" name="mothers_occupation"{% if record %} value="{{ record.data.mothers_occupation }}"{% endif %}></td>
 
-                		<td rowspan="2"><input type="checkbox" name="hn_only_candidate"
-                		{% if record %}{% if record.data.hn_only_candidate %} checked="checked"{% endif %}{% endif %}
-                		> HN only candidate
-                		<br><input type="checkbox" name="previous_interview"
-                		{% if record %}{% if record.data.previous_interview %} checked="checked"{% endif %}{% endif %}
-                		> Previous interview
-                        <br><input type="checkbox" name="pae_action"
-                		{% if record %}{% if record.data.pae_action %} checked="checked"{% endif %}{% endif %}
-                		> PAE action</td>
+                		<td rowspan="4" colspan="2">
+                		<textarea class="bigfield" name="additional_comments" placeholder="additional comments">{% if record %}{{record.data.additional_comments}}{% endif %}</textarea>
+                		</td>
+
                     </tr>
         	        <tr>
 	                    <td style="text-align:right;padding:6px 10px 0 0;">Fathers occupation</td>
 	                    <td><input type="text" name="fathers_occupation"{% if record %} value="{{ record.data.fathers_occupation }}"{% endif %}></td>
 
                     </tr>
-        	        <tr>
+        	        <tr style="display:none;">
 	                    <td style="text-align:right;padding:6px 10px 0 0;">Number of siblings</td>
                 		<td><input type="text" name="number_of_siblings"
                 		{% if record %} value="{{record.data.number_of_siblings}}"{% endif %}
                 		></td>
-                		<td rowspan="4">
-                		<textarea class="bigfield" name="additional_comments" placeholder="additional comments">{% if record %}{{record.data.additional_comments}}{% endif %}</textarea>
-                		</td>
                     </tr>
-        	        <tr>
+        	        <tr style="display:none;">
 	                    <td style="text-align:right;padding:6px 10px 0 0;">Place in siblings</td>
                 		<td><input type="text" name="place_in_siblings"
                 		{% if record %} value="{{record.data.place_in_siblings}}"{% endif %}
                 		></td>
                     </tr>
-        	        <tr>
+        	        <tr style="display:none;">
 	                    <td style="text-align:right;padding:6px 10px 0 0;">Household composition</td>
                 		<td><input type="text" name="household_composition"
                 		{% if record %} value="{{record.data.household_composition}}"{% endif %}
