--- a/portality/templates/footer.html
+++ b/portality/templates/footer.html
@@ -1,5 +1,5 @@
     <footer>
-		<p>Lothians Equal Access Programme for Schools &middot; 7 Buccleuch   Place &middot; Edinburgh &middot; EH8 9LW</p>
+		<p>Lothians Equal Access Programme for Schools &middot; 34 Buccleuch Place &middot; Edinburgh &middot; EH8 9JS</p>
 		<p>
 		<a href="/">LEAPS</a> | 
 		<a href="/policy">Data policy</a> | 
