fixing the export 100 error by changing to only give a selected list when there are specific selections. Otherwise paging and totals should be used. Also fixing the survey error display message by hiding all parts again on submit, so message shows first

--- a/portality/templates/leaps/survey/survey.html
+++ b/portality/templates/leaps/survey/survey.html
@@ -118,6 +118,8 @@ jQuery(document).ready(function() {
     var triggersave = function(event) {
         if ( !$('#survey').parsley('validate') ) {
             event.preventDefault();
+            $('.part').hide();
+            $(this).closest('.part').show();
             $('#activealert').show();
         }
     };
