--- a/portality/templates/leaps/admin/students.html
+++ b/portality/templates/leaps/admin/students.html
@@ -27,10 +27,9 @@ jQuery(document).ready(function() {
             });
         }
         var loc = $(this).attr('href');
+        loc += '?q=' + JSON.stringify(qry);
         if ( selected.length > 0 ) {
-            loc += '?selected=' + JSON.stringify(selected);
-        } else {
-            loc += '?q=' + JSON.stringify(qry);
+            loc += '&selected=' + JSON.stringify(selected);
         }
         window.location = loc;
     }
