adding summer school checkbox to export list

--- a/portality/templates/leaps/exports/index.html
+++ b/portality/templates/leaps/exports/index.html
@@ -144,7 +144,7 @@ jQuery(document).ready(function() {
         	        <tr>
 	                    <td></td>
 	                    <td></td>
-	                    <td></td>
+	                    <td><input type="checkbox" name="summer_school"> Summer school</td>
 	                    <td><input type="checkbox" name="main_language_at_home"> Main language at home</td>
                     </tr>
 
