updating survey ui and print layouts, updating data policy, and augmenting dao and core for es 1.x

--- a/portality/templates/leaps/survey/survey.html
+++ b/portality/templates/leaps/survey/survey.html
@@ -384,7 +384,7 @@ input.bigfield{
 	    <div class="span12">
 	        <div class="well">
 	            <h2>Qualifications and currently sitting</h2>
-	            <p><strong>Part 2 of 6</strong> - <strong>Please input details of all qualifications you have (or are studying for current year) for each year of school</strong>. <br /><br />If you do not yet know your grade, select Unknown in the Grade field. If you have any qualifications that do not meet the criteria below, you will have the option to describe them on the following pages. Use one row per qualification.</p>
+	            <p><strong>Part 2 of 6</strong> - <strong>Please input details of all qualifications you have (or are studying for current year) for each year of school</strong>. <br>Please include any qualifications you sat but did not pass.<br /><br />If you do not yet know your grade, select Unknown in the Grade field. If you have any qualifications that do not meet the criteria below, you will have the option to describe them on the following pages. Use one row per qualification.</p>
 	        </div>
 	    </div>
 	</div>
@@ -593,7 +593,7 @@ input.bigfield{
 	    <div class="span12">
 	        <div class="well">
 	            <h2>Interests and achievements</h2>
-	            <p><strong>Part 4 of 6</strong> - please give brief descriptions of your extra-curricular interests and achievements e.g. sport, music, drama, Duke of Edinburgh, prefect etc. Use one box per interest, up to the maximum of 6.</p>
+	            <p><strong>Part 4 of 6</strong> - please give short details of your extra-curricular interests and achievements e.g. sport, music, drama, Duke of Edinburgh, prefect etc and they will be discussed in more detail at your interview. Use one box per interest, up to the maximum of 6.</p>
 	        </div>
 	    </div>
 	</div>
@@ -634,7 +634,7 @@ input.bigfield{
 	    <div class="span12">
 	        <div class="well">
 	            <h2>Work and other experience</h2>
-	            <p><strong>Part 5 of 6</strong> - please give brief descriptions of any work or voluntary experience you have had e.g. paid employment, school committees, Pathways to Professions events. Use one row per experience, up to the maximum of 6.</p>
+	            <p><strong>Part 5 of 6</strong> - please give short details of any work or voluntary experience you have had e.g. paid employment, school committees, Pathways to Professions events etc and they can be discussed further at your interview. Use one row per experience, up to the maximum of 6.</p>
 	        </div>
 	    </div>
 	</div>
@@ -704,16 +704,16 @@ input.bigfield{
                 		</select></td>
                     </tr>
                     <tr>
-                        <td style="text-align:right;padding:6px 10px 0 0;">List any additional qualifications not already mentioned</td>
+                        <td style="text-align:right;padding:6px 10px 0 0;">Please describe any career plans you may have</td>
+                        <td><textarea class="bigfield" name="career_plans"></textarea></td>
+                    </tr>
+                    <tr>
+                        <td style="text-align:right;padding:6px 10px 0 0;">List any additional qualifications not already mentioned (e.g. Sports Leadership etc)</td>
                         <td><textarea class="bigfield" name="additional_qualifications"></textarea></td>
                     </tr>
                     <tr>
                         <td style="text-align:right;padding:6px 10px 0 0;">Describe any issues affecting academic performance</td>
                         <td><textarea class="bigfield" name="issues_affecting_performance"></textarea></td>
-                    </tr>
-                    <tr>
-                        <td style="text-align:right;padding:6px 10px 0 0;">Please describe any career plans you may have</td>
-                        <td><textarea class="bigfield" name="career_plans"></textarea></td>
                     </tr>
                 </tbody>
 	        </table>
