--- a/portality/templates/leaps/policy.html
+++ b/portality/templates/leaps/policy.html
@@ -16,13 +16,16 @@
 
         <ul>
 
-        <li>The information you supply will be held on the LEAPS computer system for administration purposes and will be used to contact 
-        you again in future if required.</li>
+        <li>The information you supply will be held on behalf of LEAPS by a third party provider and may be used to contact you again 
+        in future if required.</li>
 
         <li>LEAPS staff may selectively make some information available to admissions staff to support your application to Further and 
         Higher Education institutions.</li>
 
         <li>LEAPS may access your application details via the UCAS website in order to further support your applications where required.</li>
+
+        <li>LEAPS would like to track your progress through previous LEAPS events in order to support future LEAPS students. This will 
+        adhere to the requirements on safeguarding the confidentiality of data outlined above.</li>
 
         <li>LEAPS, our partners and selected external bodies would like to track your progress through college or university in order to 
         support future LEAPS students. Information required will typically be requested directly from the careers service associated 
