updating data policy

--- a/portality/templates/leaps/policy.html
+++ b/portality/templates/leaps/policy.html
@@ -24,19 +24,17 @@
 
         <li>LEAPS may access your application details via the UCAS website in order to further support your applications where required.</li>
 
-        <li>LEAPS would like to track your progress through previous LEAPS events in order to support future LEAPS students. This will 
-        adhere to the requirements on safeguarding the confidentiality of data outlined above.</li>
+        <li>LEAPS would like to track your progress through other LEAPS events that you attended in order to support future LEAPS students.</li>
 
         <li>LEAPS, our partners and selected external bodies would like to track your progress through college or university in order to 
         support future LEAPS students. Information required will typically be requested directly from the careers service associated 
-        with your school and/or your Higher Education Institution. This will adhere to the requirements on safeguarding the confidentiality 
-        of data outlined above.</li>
+        with your school and/or your Higher Education Institution.</li>
 
-        <li>Your personal record will be held securely for tracking purposes, currently for a period of 5 years.</li>
+        <li>Your personal record will be held securely for tracking purposes, currently for a period of 7 years after leaving school.</li>
 
         <li>You have a right to view the information we hold on your personal record at any time and we ask that you keep us updated with any changes.</li>
 
-        <li>We will not pass your data on to any external parties, with the exception of reasons given above.</li>
+        <li>We will only share your information for the purposes outlined above or where we are legally permitted to do so.</li>
 
         </ul>
 
