fixing datamodel page for shep school settings

--- a/portality/templates/leaps/admin/datamodel.html
+++ b/portality/templates/leaps/admin/datamodel.html
@@ -143,7 +143,7 @@ jQuery(document).ready(function($) {
     	        <tr>
                     <td style="text-align:right;padding:6px 10px 0 100px;">SHEP school</td>
             		<td style="padding-top:5px;padding-bottom:10px;">
-            		    <input type="checkbox" name="SHEP_school" value="yes"
+            		    <input type="checkbox" name="shep_school" value="yes"
             		    {% if record %}{% if record.data.shep_school %} checked="checked"{% endif %}{% endif %}
             		    >
             		</td>
