--- a/portality/templates/leaps/admin/student.html
+++ b/portality/templates/leaps/admin/student.html
@@ -499,14 +499,15 @@ fieldset{
                     <tr>
 	                    <td style="text-align:right;padding:6px 10px 0 0;">Status</td>
                 		<td><select name="status">
-                		    {% if record %}{% if record.data.status not in ["new", "not_eligible", "not_applying", "awaiting_interview", "interviewed", "absent", "contact_required", "paes_requested", "paes_in_progress", "paes_complete", "complete"] %}<option style="color:red;" selected="selected">{{record.data.status}}</option>{% endif %}{% endif %}
+                		    {% if record %}{% if record.data.status not in ["new", "not_eligible_interviewed", "not_eligible_not_interviewed", "not_applying", "awaiting_interview", "interviewed", "absent", "query", "paes_requested", "paes_in_progress", "paes_complete", "complete"] %}<option style="color:red;" selected="selected">{{record.data.status}}</option>{% endif %}{% endif %}
                 		    <option>new</option>
-              		        <option{% if record %}{% if record.data.status == "not_eligible" %} selected="selected"{% endif %}{% endif %}>not_eligible</option>
+              		        <option{% if record %}{% if record.data.status == "not_eligible_interviewed" %} selected="selected"{% endif %}{% endif %}>not_eligible_interviewed</option>
+              		        <option{% if record %}{% if record.data.status == "not_eligible_not_interviewed" %} selected="selected"{% endif %}{% endif %}>not_eligible_not_interviewed</option>
               		        <option{% if record %}{% if record.data.status == "not_applying" %} selected="selected"{% endif %}{% endif %}>not_applying</option>
               		        <option{% if record %}{% if record.data.status == "awaiting_interview" %} selected="selected"{% endif %}{% endif %}>awaiting_interview</option>
               		        <option{% if record %}{% if record.data.status == "interviewed" %} selected="selected"{% endif %}{% endif %}>interviewed</option>
               		        <option{% if record %}{% if record.data.status == "absent" %} selected="selected"{% endif %}{% endif %}>absent</option>
-              		        <option{% if record %}{% if record.data.status == "contact_required" %} selected="selected"{% endif %}{% endif %}>contact_required</option>
+              		        <option{% if record %}{% if record.data.status == "query" %} selected="selected"{% endif %}{% endif %}>query</option>
               		        <option{% if record %}{% if record.data.status == "paes_requested" %} selected="selected"{% endif %}{% endif %}>paes_requested</option>
               		        <option{% if record %}{% if record.data.status == "paes_in_progress" %} selected="selected"{% endif %}{% endif %}>paes_in_progress</option>
               		        <option{% if record %}{% if record.data.status == "paes_complete" %} selected="selected"{% endif %}{% endif %}>paes_complete</option>
