--- a/portality/templates/leaps/survey/survey.html
+++ b/portality/templates/leaps/survey/survey.html
@@ -663,8 +663,13 @@ input.bigfield{
 	    <div class="span12">
 	        <div class="well">
 	            <h2>Work and other experience</h2>
-	            <p><strong>Part 5 of 6</strong> - please give short details of any work or voluntary experience you have had e.g. paid employment, school committees, Pathways to Professions events etc and they can be discussed further at your interview. Use one row per experience, up to the maximum of 6.</p>
-	        </div>
+	            <p><strong>Part 5 of 6</strong> - please give short details of any work or voluntary experience you have had e.g. 
+								paid employment, school committees, Pathways to Professions events etc and they can be discussed further at 
+								your interview. It is recommended that you write your own copy of interests, achievements and work experience 
+								in a document elsewhere, then insert them into this form. You will find the document useful for your personal 
+								statement in your UCAS application. Remember - you won't be able to return to this form! 
+								Use one row per experience, up to the maximum of 6.</p>
+					</div>
 	    </div>
 	</div>
 
